--- a/kandi/bib.bib
+++ b/kandi/bib.bib
@@ -10,18 +10,17 @@
 }
 
 @article{renyi,
-author="R{\'e}nyi, Alfr{\'e}d",
-title="On the theory of order statistics",
-journal="Acta Mathematica Academiae Scientiarum Hungarica",
-year="1953",
-month="Sep",
-day="01",
-volume="4",
-number="3",
-pages="191--231",
-issn="1588-2632",
-doi="10.1007/BF02127580",
-url="https://doi.org/10.1007/BF02127580"
+  author={R{\'e}nyi, Alfr{\'e}d},
+  title={On the theory of order statistics},
+  journal={Acta Mathematica Academiae Scientiarum Hungarica},
+  year={1953},
+  month={Sep},
+  volume={4},
+  number={3},
+  pages={191--231},
+  issn={1588-2632},
+  doi={10.1007/BF02127580},
+  url={https://doi.org/10.1007/BF02127580}
 }
 
 @book{rosenthal,
@@ -55,4 +54,42 @@ url="https://doi.org/10.1007/BF02127580"
   year={2007},
   publisher={Springer},
   address={New York}
+}
+
+@article{hill,
+  ISSN={00905364},
+  URL={http://www.jstor.org/stable/2958370},
+  author={Bruce M. Hill},
+  journal={The Annals of Statistics},
+  number={5},
+  pages={1163--1174},
+  publisher={Institute of Mathematical Statistics},
+  title={A Simple General Approach to Inference About the Tail of a Distribution},
+  volume={3},
+  year={1975}
+}
+
+@article{fisher,
+  title={Limiting forms of the frequency distribution of the largest or smallest member of a sample},
+  volume={24},
+  DOI={10.1017/S0305004100015681},
+  number={2},
+  journal={Mathematical Proceedings of the Cambridge Philosophical Society},
+  publisher={Cambridge University Press},
+  author={Fisher, R. A. and Tippett, L. H. C.},
+  year={1928},
+  pages={180–190}
+}
+
+@article{gnedenko,
+  ISSN={0003486X},
+  URL={http://www.jstor.org/stable/1968974},
+  author={B. Gnedenko},
+  journal={Annals of Mathematics},
+  number={3},
+  pages={423--453},
+  publisher={Annals of Mathematics},
+  title={Sur La Distribution Limite Du Terme Maximum D'Une Serie Aleatoire},
+  volume={44},
+  year={1943}
 }
