--- a/kandi/bib.bib
+++ b/kandi/bib.bib
@@ -93,3 +93,17 @@
   volume={44},
   year={1943}
 }
+
+@article{mason,
+ ISSN = {00911798},
+ URL = {http://www.jstor.org/stable/2243383},
+ author = {David M. Mason},
+ journal = {The Annals of Probability},
+ number = {3},
+ pages = {754--764},
+ publisher = {Institute of Mathematical Statistics},
+ title = {Laws of Large Numbers for Sums of Extreme Values},
+ volume = {10},
+ year = {1982}
+}
+
